Fix: Resolve mixed-type incompatibility in ChartRedrawView
- Replaced `List.of()` with `Arrays.asList(new Object[])` to allow
mixed-type arguments (e.g., String and Integer) in chart data rows.
- Updated header and dynamic row addition logic to ensure compatibility
with mixed data types.

This fix resolves issue #152 related to `List.of()` incompatibility with
heterogeneous data types.